[gd_scene load_steps=6 format=3 uid="uid://caad3jumn2sqs"]

[ext_resource type="Script" path="res://scenes/GameOver.gd" id="1_jce72"]
[ext_resource type="Texture2D" uid="uid://yd67rtpfvxmq" path="res://assets/botella/Mesa de trabajo 41 copia 3.png" id="2_tkg2k"]
[ext_resource type="Texture2D" uid="uid://cky5p2x8s1m03" path="res://assets/fonts/Mesa de trabajo 72 copia 3.png" id="3_2apmx"]
[ext_resource type="Texture2D" uid="uid://dkvwvb0jda065" path="res://assets/fonts/Mesa de trabajo 72 copia.png" id="3_mvvib"]
[ext_resource type="Texture2D" uid="uid://dh12v7b82fb1d" path="res://assets/fonts/IMG_1869.PNG" id="5_f2icl"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jce72")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 2463.0
offset_bottom = 1384.0
scale = Vector2(0.522894, 0.522894)
texture = ExtResource("2_tkg2k")
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 194.0
offset_top = 987.0
offset_right = 685.0
offset_bottom = 1145.0
scale = Vector2(0.730593, 0.730593)
texture_normal = ExtResource("3_mvvib")
texture_pressed = ExtResource("3_2apmx")
texture_hover = ExtResource("3_2apmx")

[node name="TextureButton2" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 546.0
offset_top = 1057.0
offset_right = 1037.0
offset_bottom = 1215.0
scale = Vector2(0.730593, 0.730593)
texture_normal = ExtResource("3_mvvib")
texture_pressed = ExtResource("3_2apmx")
texture_hover = ExtResource("3_2apmx")

[node name="TextureButton3" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 924.0
offset_top = 1101.0
offset_right = 1415.0
offset_bottom = 1259.0
scale = Vector2(0.730593, 0.730593)
texture_normal = ExtResource("3_mvvib")
texture_pressed = ExtResource("3_2apmx")
texture_hover = ExtResource("3_2apmx")

[node name="TextureButton4" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 1292.0
offset_top = 1060.0
offset_right = 1783.0
offset_bottom = 1218.0
scale = Vector2(0.730593, 0.730593)
texture_normal = ExtResource("3_mvvib")
texture_pressed = ExtResource("3_2apmx")
texture_hover = ExtResource("3_2apmx")

[node name="TextureButton5" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 1667.0
offset_top = 1016.0
offset_right = 2158.0
offset_bottom = 1174.0
scale = Vector2(0.730593, 0.730593)
texture_normal = ExtResource("3_mvvib")
texture_pressed = ExtResource("3_2apmx")
texture_hover = ExtResource("3_2apmx")

[node name="quit" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 2287.27
offset_top = 68.8476
offset_right = 2895.27
offset_bottom = 654.848
scale = Vector2(0.159642, 0.159642)
texture_normal = ExtResource("5_f2icl")

[connection signal="pressed" from="TextureRect/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureRect/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="TextureRect/TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="TextureRect/TextureButton4" to="." method="_on_texture_button_4_pressed"]
[connection signal="pressed" from="TextureRect/TextureButton5" to="." method="_on_texture_button_5_pressed"]
[connection signal="pressed" from="TextureRect/quit" to="." method="_on_quit_pressed"]
